src/styles/_responsive.scss
// phones an touch screens
@media (hover: none) and (pointer: coarse) {
	.b_removethumb {
		opacity: 1;
	}

	#showSettings {
		-webkit-touch-callout: none;
		-webkit-user-select: none;
		user-select: none;

		&:active {
			filter: brightness(0.5);
		}
	}
}

@media screen and (max-height: 900px) {
	body {
		font-size: 13px;
	}
}

// mobile
@media screen and (max-width: 600px) {
	html,
	body {
		font-size: 12px;
		overflow-y: auto;
	}

	#skiptosettings {
		display: none;
	}

	#element-mover {
		font-size: 12px;
	}

	#interface {
		padding-bottom: 77px;
		min-height: 100dvh;

		&.pushed {
			transform: translateX(0);
		}
	}

	#quotes_container {
		width: 90vw;
	}

	#settings {
		top: 100%; // kiwi browser fix as dvh doesn't work (?)
		right: auto;
		left: 0%;
		bottom: -100dvh;
		height: 100dvh;
		width: 100%;
		font-size: 1.2em;
		padding: 0px;
		border-top-left-radius: 1em;
		border-top-right-radius: 1em;
		-webkit-overflow-scrolling: touch;

		&.shown {
			transform: translateX(0) translateY(-75%);
		}
	}

	// Tooltip (?) centered when span wrap
	.as_collection {
		max-height: 140px;

		.wrapper span {
			align-items: center;
		}
	}

	#mobile-drag-zone {
		display: block;

		& ~ h2:first-of-type {
			margin-top: 0;
		}
	}

	#cssEditor,
	.param {
		margin-right: 12px;
		margin-left: 12px;
	}

	#cssEditor {
		width: calc(100% - 24px);
	}

	#creditContainer {
		width: 100%;
		padding-right: 7em;
		padding-left: 1.5em;
	}

	#credit {
		display: block;
		line-height: 14px;

		a,
		p,
		span {
			font-size: 11px;
		}
	}

	#popup {
		display: none;
	}

	#bookmarks_container {
		font-size: 14px;
	}

	#bookmarks_container #bookmarks {
		width: 90%;
		min-width: 0;

		form div {
			width: auto;
		}
	}
}

// fix iPhone notch in landscape
@media (orientation: landscape) and (hover: none) and (pointer: coarse) {
	body {
		padding: env(safe-area-inset);
		overflow-y: scroll;
	}

	#main,
	#time {
		min-height: unset;
	}
}

// touch screens!
@media only screen and (hover: none) and (pointer: coarse) {
	#background_overlay {
		position: absolute;
	}

	#editlink {
		width: 60%;
		max-width: 275px;
		transform: unset;
		top: unset;
		left: unset;
		top: 50%;
		left: 50%;
		transform: translate(-50%, -50%) !important;
	}

	#sb-suggestions,
	#searchbar {
		font-size: 1.7em;
		box-sizing: border-box;
	}

	#sb-buttons {
		padding-right: 1em;

		#sb_submit img {
			height: 1.5em;
		}

		#sb_empty {
			font-size: 2em;
		}
	}
}

